src/content/docs/en/25.0.0/rpc/wallet/unloadwallet.md
---
name: unloadwallet
btcversion: 25.0.0
btcgroup: wallet
permalink: en/doc/25.0.0/rpc/wallet/unloadwallet/
---

unloadwallet ( "wallet_name" load_on_startup )

Unloads the wallet referenced by the request endpoint otherwise unloads the wallet specified in the argument.
Specifying the wallet name on a wallet endpoint is invalid.

Arguments:
1. wallet_name        (string, optional, default=the wallet name from the RPC endpoint) The name of the wallet to unload. If provided both here and in the RPC endpoint, the two must be identical.
2. load_on_startup    (boolean, optional) Save wallet name to persistent settings and load on startup. True to add wallet to startup list, false to remove, null to leave unchanged.

Result:
{                       (json object)
  "warning" : "str",    (string, optional) Warning messages, if any, related to unloading the wallet. Multiple messages will be delimited by newlines. (DEPRECATED, returned only if config option -deprecatedrpc=walletwarningfield is passed.)
  "warnings" : [        (json array, optional) Warning messages, if any, related to unloading the wallet.
    "str",              (string)
    ...
  ]
}

Examples:
> bitcoin-cli unloadwallet wallet_name
> curl --user myusername --data-binary '{"jsonrpc": "1.0", "id": "curltest", "method": "unloadwallet", "params": [wallet_name]}' -H 'content-type: text/plain;' http://127.0.0.1:8332/


